--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html" style="color:white;">
+            <a class="navbar-brand page-scroll" href="#hero-area" style="color:white;">
               <strong>Seamless Solution</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
@@ -78,13 +78,13 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-content">
-            <h1>We are the solution for your technical acceleration.</h1>
+            <h1>We are the solution.</h1>
             <p>
               We are a software agency that helps companies achieve their business
               goals by developing cutting-edge software solutions to support their business needs.
             </p>
             <div class="button">
-              <a href="#contact" class="btn primary-btn">Schedule a Free Consultation</a>
+              <a href="#contact" class="btn primary-btn page-scroll">Schedule a Free Consultation</a>
             </div>
           </div>
         </div>
