updated services icons

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-capsule"></i>
+              <i class="lni lni-keyword-research"></i>
             </div>
             <div class="service-content">
               <h4>Web Scraping</h4>
@@ -137,7 +137,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-bootstrap"></i>
+              <i class="lni lni-shortcode"></i>
             </div>
             <div class="service-content">
               <h4>Process Automation</h4>
@@ -150,7 +150,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-shortcode"></i>
+              <i class="lni lni-comments-alt"></i>
             </div>
             <div class="service-content">
               <h4>Localization</h4>
@@ -176,7 +176,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-layers"></i>
+              <i class="lni lni-reload"></i>
             </div>
             <div class="service-content">
               <h4>Machine Learning</h4>
@@ -189,7 +189,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-reload"></i>
+              <i class="lni lni-layers"></i>
             </div>
             <div class="service-content">
               <h4>Database Management</h4>
